--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 <body>
     <div class="container">
-        <h1>Find The Number (Between <span class="first">0</span> and <span class="second">100</span> )</h1>
+        <h1>Find The Number </h1>
+        <h2>( Between <span class="first">0</span> and <span class="second">100</span> )</h2>
         <div class="input-div">
             <input class="input" type="number" max="100" min="0">
             <button class="btn">Check</button>
         </div>
         <div class="p-text">
             <p class="text"></p>
+            <p class="text2">This is your test number : <span class="test-number">0</span> </p>
         </div>
     </div>
     
