--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
         <h2>( Between <span class="first">0</span> and <span class="second">100</span> )</h2>
         <div class="input-div">
             <input class="input" type="number" max="100" min="0">
-            <button class="btn">Check</button>
+            <button class="btn check">Check</button>
+            <button class="btn again">Again</button>
         </div>
         <div class="p-text">
             <p class="text"></p>
             <p class="text2">This is your test number : <span class="test-number">0</span> </p>
+        </div>
+        <div class="score-div">
+            <p class="score">You have <span class="score-number">10</span> chance</p>
         </div>
     </div>
     
