--- a/index.html
+++ b/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess The Number</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1>Find The Number </h1>
-        <h2>( Between <span class="first">0</span> and <span class="second">100</span> )</h2>
-        <div class="input-div">
-            <input class="input" type="number" max="100" min="0">
-            <button class="btn check">Check</button>
-            <button class="btn again">Again</button>
-        </div>
-        <div class="p-text">
-            <p class="text"></p>
-            <p class="text2">This is your test number : <span class="test-number">0</span> </p>
-        </div>
-        <div class="score-div">
-            <p class="score">You have <span class="score-number">10</span> chance</p>
-        </div>
+      <div class="header">
+        <h1 class="h-ilk">Guess The Number</h1>
+        <h2 class="h-iki">
+          ( Between <span class="first">0</span> and
+          <span class="second">100</span> )
+        </h2>
+      </div>
+
+      <div class="input-div">
+        <input class="input" type="number" max="100" min="0" />
+        <button class="btn check">Check</button>
+        <button class="btn again">Again</button>
+      </div>
+      <div class="p-text">
+        <p class="text"></p>
+        <p class="text2">
+          This is your test number : <span class="test-number">0</span>
+        </p>
+      </div>
+      <div class="score-div">
+        <p class="score">
+          You have <span class="score-number">10</span> chance
+        </p>
+      </div>
     </div>
-    
+    <audio id="click" src="./audio/rclick-13693.mp3"></audio>
+    <audio id="lose" src="./audio/080556_quotyou-losequot-88884.mp3"></audio>
+    <audio id="win" src="./audio/congratulations-deep-voice-172193.mp3"></audio>
+
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
